fix scrollbar width

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -94,7 +94,7 @@ h2 {
   Scrollbar
 */
 .ps__rail-y {
-  width: 0.9rem;
+  width: 1.1rem;
   opacity: 0.6 !important;
 }
 
